--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,12 @@ nav {
     max-width: 800px;
 }
 
+#hero-social-links img {
+    height: 30px;
+    width: 30px;
+    margin: 10px 10px;
+}
+
 
 #resume-links {
     display: flex;
