--- a/styles.css
+++ b/styles.css
@@ -145,8 +145,12 @@ nav {
     background-color: rgba(0,0,0,0.5);
     color: white;
     width: 100%;
+    text-align: center;
 }
 
+.skills {
+    margin-top: 100px;
+}
 
 .skills ul {
     padding-inline-start: 0;
@@ -162,12 +166,50 @@ nav {
 
 #contact-me {
     padding: 0 150px;
+    max-width: 1200px;
+}
+
+.work-and-skills-social-links {
+    padding-top: 25px;
+}
+
+.work-and-skills-social-links a {
+    margin: 50px 50px 0 0;
+    display: inline;
 }
 
 footer {
     padding-left: 150px;
     padding-right: 150px;
+    padding-bottom: 50px;
+    position: relative;
+    border-top: 1px solid black;
+    margin-top: 100px;
+    background-color: black;
+    color: white;
 }
+
+.footer-contact-info {
+    padding-top: 50px;
+}
+
+.footer-contact-info p {
+    margin-bottom: 5px;
+    margin-top: 0px;
+}
+
+.footer-social-links {
+    position: absolute;
+    right: 150px;
+    bottom: 100px;
+}
+
+.footer-social-buttons {
+    height: 30px;
+    width: 30px;
+    margin: 10px 10px;
+}
+
 
 @media only screen and (max-width: 1400px) {
   /* For mobile phones: */
@@ -182,4 +224,64 @@ footer {
     .left-column {
     display: block;
   }
+}
+
+@media only screen and (max-width: 800px) {
+    [class*="col-"] {
+        width: 100%;
+    }
+    
+    #nav-logo img {
+        width: 100%;
+        margin: auto;
+    }
+    
+    #nav-links {
+        display: none;
+    }
+    
+    #hero {
+        padding: 100px 50px 150px 50px;
+    }
+    
+    #work-and-skills {
+        padding: 0 50px;
+    }
+    
+    .left-column {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    
+    .work-item {
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        position: relative;
+        top: -50px;
+        width: 300px;
+        height: 450px;
+        margin: 0 50px 50px 0;
+    }
+    
+    #contact-me {
+        padding: 0 50px;
+    }
+    
+    .work-and-skills-social-links a {
+        display: block;
+        margin: 0px;
+    }
+    
+    footer {
+        padding-left: 50px;
+        padding-right: 50px;
+        padding-bottom: 50px;
+        position: static;
+    }
+    
+    .footer-social-links {
+        position: static;
+    }
+    
 }
