--- a/styles.css
+++ b/styles.css
@@ -273,6 +273,10 @@ footer {
         margin: 0px;
     }
     
+    .skills {
+        margin-top: 0px;
+    }
+    
     footer {
         padding-left: 50px;
         padding-right: 50px;
